--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Movies</h1>
 
-<ul>
+<ul id="movies">
 <% @movies.each do |movie| %>
-  <li><%= movie.title %></li>
+  <li class="title"><%= movie.title %></li>
 <% end %>
 </ul>
