Don't 500 if stream service adds new types

--- a/app/views/centres/show.html.erb
+++ b/app/views/centres/show.html.erb
@@ -1,6 +1,8 @@
 <h1><%=@centre.name%></h1>
 <%- @stream.each_slice(4) do |group| -%>
   <%- group.each do |result| -%>
-    <%= render partial: "centres/stream/#{result['type']}", locals: {result: result} %>
+    <% if %w(deal event product).include?(result['type']) %>
+      <%= render partial: "centres/stream/#{result['type']}", locals: {result: result} %>
+    <% end %>
   <%- end -%>
 <%- end -%>
