--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,11 +8,29 @@
 </head>
 <body>
 
+<nav>
+  <%- if params[:centre_id] || params[:id] -%>
+    <div class="inner">
+      <div class="menu">
+        <%= link_to "Stores", centre_stores_path(params[:centre_id] || params[:id]) %>
+        <%= link_to "Products", product_stream_centre_path(params[:centre_id] || params[:id]) %>
+        <%= link_to "Deals", centre_deals_path(params[:centre_id] || params[:id]) %>
+        <%= link_to "Events", centre_events_path(params[:centre_id] || params[:id]) %>
+      </div>
+      <div class="search">
+        <div class="input">
+          <input type="text" placeholder="Search stores, products, deals &amp; events…">
+        </div>
+      </div>
+    </div>
+  <%- end -%>
+</nav>
+
 <%= yield %>
 
 <script type='text/javascript'>
 jQuery(function($){
-      $('.chzn-select').chosen();
+  $('.chzn-select').chosen();
 });
 </script>
 <%= yield :javascript %>
