Add trading hours link to top nav

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
         <%= link_to "Products", product_stream_centre_path(params[:centre_id] || params[:id]) %>
         <%= link_to "Deals", centre_deals_path(params[:centre_id] || params[:id]) %>
         <%= link_to "Events", centre_events_path(params[:centre_id] || params[:id]) %>
+        <%= link_to "Trading Hours", centre_trading_hours_path(params[:centre_id] || params[:id]) %>
       </div>
       <div class="search">
         <div class="input">
