--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,7 @@
 
 <script type='text/javascript'>
 jQuery(function($){
-  $('.chzn-select').chosen();
+  $('.chzn-select').chosen({allow_single_deselect: true});
 });
 </script>
 <%= yield :javascript %>
