Make applied category facet tag render a link with data attributes

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,7 +1,13 @@
 <%= form_tag centre_products_path(id: params[:centre_id]), method: :get, id: 'search_form' do %>
   <%# TODO: Category select %>
   <%= hidden_field_tag "last", params[:last], class: 'last_facet' %>
-  <%= category_facet_tags @search %>
+  <%= hidden_field_tag :super_cat, params[:super_cat] if params[:super_cat] %>
+  <%= hidden_field_tag :category, params[:category] if params[:category] %>
+  <%= hidden_field_tag :sub_category, params[:sub_category] if params[:sub_category] %>
+  <%= category_facet_tag @search.facets %>
+  <%= applied_category_filter_tag :super_cat, @search.applied_filters %>
+  <%= applied_category_filter_tag :category, @search.applied_filters %>
+  <%= applied_category_filter_tag :sub_category, @search.applied_filters %>
   <%= facet_tag :retailer, @search.facets, display_name: 'Stores', multiple: true %>
   <%= facet_tag :brand, @search.facets, multiple: true %>
   <%= facet_tag :colour, @search.facets, multiple: true %>
