pulls micello community from centre-service

--- a/app/views/shared/_javascripts_global.html.erb
+++ b/app/views/shared/_javascripts_global.html.erb
@@ -1,3 +1,6 @@
+<!-- JavaScript required application config -->
+<%= include_gon(:namespace => :westfield) %>
+<!-- //JavaScript required application config -->
 <!-- Site wide JavaScript -->
 <%= javascript_include_tag 'application' %>
 <!-- //Site wide JavaScript -->
