--- a/app/views/stores/_map.html.erb
+++ b/app/views/stores/_map.html.erb
@@ -1,2 +1,3 @@
 <%= javascript_include_tag 'http://maps.micello.com/webmap/v0/micellomap.js' %>
-<%= javascript_include_tag 'map', :"data-map" => MapConfig.centre(params[:centre_id]) %>
+<%= javascript_include_tag 'map' %>
+<div id="map">Loading map...</div>
