--- a/app/assets/stylesheets/partials/modules/_icon.scss
+++ b/app/assets/stylesheets/partials/modules/_icon.scss
@@ -25,82 +25,85 @@
 /* --Set icons-- */
 
 /* Store */
-.icon--store:before {content: "\e80c";}
+.icon--store:before {content: "\e815";}
 
 /* Store 2 */
-.icon--store2:before {content: "\e80a";}
+//.icon--store2:before {content: "\e80a";}
 
 /* Products */
-.icon--products:before {content: "\e811";}
+.icon--products:before {content: "\e816";}
 
 /* Deals */
-.icon--deals:before {content: "\e810";}
+.icon--deals:before {content: "\e813";}
 
 /* Events */
-.icon--events:before {content: "\e80f";}
+.icon--events:before {content: "\e814";}
 
 /* Favourites */
-.icon--favs:before {content: "\e803";}
+.icon--favs:before {content: "\e811";}
 
 /* Tag */
-.icon--tag:before {content: "\e80e";}
+.icon--tag:before {content: "\e810";}
 
 /* Search */
 .icon--search:before {content: "\e812";}
 
 /* Search 2 */
-.icon--search2:before {content: "\e80d";}
+.icon--search2:before {content: "\e804";}
 
 /* Dining */
-.icon--dining:before {content: "\e805";}
+.icon--dining:before {content: "\e803";}
 
 /* Information */
-.icon--info:before {content: "\e801";}
+.icon--info:before {content: "\e807";}
 
 /* Pin */
-.icon--pin:before {content: "\e802";}
+.icon--pin:before {content: "\e809";}
 
 /* Map */
-.icon--map:before {content: "\e80b";}
+.icon--map:before {content: "\e80a";}
 
 /* Video */
-.icon--video:before {content: "\e809";}
+.icon--video:before {content: "\e800";}
 
 /* User */
-.icon--user:before {content: "\e800";}
+.icon--user:before {content: "\e805";}
 
 /* Phone */
-.icon--phone:before {content: "\e807";}
+.icon--phone:before {content: "\e801";}
 
 /* Hours */
-.icon--hours:before {content: "\e804";}
+.icon--hours:before {content: "\e80b";}
 
 /* Signout */
-.icon--signout:before {content: "\e806";}
+.icon--signout:before {content: "\e802";}
 
 /* Close large */
-.icon--close-lrg:before {content: "\e81a";}
+.icon--close-lrg:before {content: "\e817";}
 
 /* Close small */
-.icon--close-sml:before {content: "\e819";}
+.icon--close-sml:before {content: "\e806";}
 
 /* Comment */
 .icon--comment:before {content: "\e818";}
 
 /* Arrow down */
-.icon--arrow-down:before {content: "\e816";}
+.icon--arrow-down:before {content: "\e80c";}
 
 /* Arrow right */
-.icon--arrow-right:before {content: "\e815";}
+.icon--arrow-right:before {content: "\e80d";}
 
 /* Arrow big left */
-.icon--arrow-left-big:before {content: "\e814";}
+.icon--arrow-left-big:before {content: "\e80e";}
 
 /* Arrow big right */
-.icon--arrow-right-big:before {content: "\e813";}
+.icon--arrow-right-big:before {content: "\e80f";}
 
 /* Arrow down full */
-.icon--arrow-down-full:before {content: "\e817";}
+.icon--arrow-down-full:before {content: "\e819";}
+
+/* Arrow down right */
+.icon--arrow-right-full:before {content: "\e81a";}
 
 /* --Extenders-- */
 
